fixed the charts responsiveness on mobile

--- a/src/components/kpiCard/style.module.css
+++ b/src/components/kpiCard/style.module.css
@@ -16,6 +16,19 @@
     font-style: normal;
     font-weight: initial;
 }
+
+.linebk {
+    /* margin-top: 50px !important; */
+    background: linear-gradient(
+        218.17deg,
+        rgba(59, 81, 96, 0.5) 0.82%,
+        rgba(59, 81, 96, 0.245) 95.35%
+    );
+    min-height: 350px;
+    /* max-width: 150px; */
+    /* width: 25rem; */
+}
+
 .header {
     width: 100%;
     height: 100px;
